Fix Overview Service