@@ -7,10 +7,11 @@ import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
-import java.util.Iterator;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
-import java.util.function.BiPredicate;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 import lombok.experimental.UtilityClass;
 import org.springframework.data.domain.Pageable;
 
@@ -28,31 +29,14 @@ public class OverviewService {
   }
 
   public static <T extends Versionable> List<T> mergeVersionsForDisplay(List<T> versionsToMerge,
-      BiPredicate<T, T> equalPredicate) {
+      Function<T, String> swissIdExtractor) {
     if (versionsToMerge.isEmpty()) {
       return Collections.emptyList();
     }
-
     List<T> result = new ArrayList<>();
 
-    List<T> versions = new ArrayList<>();
-    Iterator<T> iterator = versionsToMerge.iterator();
-    T previous = iterator.next();
-    versions.add(previous);
-    T current;
-
-    while (iterator.hasNext()) {
-      current = iterator.next();
-      if (equalPredicate.test(previous, current)) {
-        versions.add(current);
-      } else {
-        result.add(getDisplayModel(versions));
-        versions.clear();
-        versions.add(current);
-      }
-      previous = current;
-    }
-    result.add(getDisplayModel(versions));
+    Map<String, List<T>> groupedVersions = versionsToMerge.stream().collect(Collectors.groupingBy(swissIdExtractor));
+    groupedVersions.values().forEach(versions -> result.add(getDisplayModel(versions)));
 
     return result;
   }
@@ -61,14 +45,14 @@ public class OverviewService {
     List<T> sortedVersions = versions.stream().sorted(Comparator.comparing(T::getValidFrom)).toList();
 
     T versionToShow = getPrioritizedVersion(sortedVersions);
-    versionToShow.setValidFrom(sortedVersions.get(0).getValidFrom());
-    versionToShow.setValidTo(sortedVersions.get(sortedVersions.size() - 1).getValidTo());
+    versionToShow.setValidFrom(sortedVersions.getFirst().getValidFrom());
+    versionToShow.setValidTo(sortedVersions.getLast().getValidTo());
     return versionToShow;
   }
 
   private static <T extends Versionable> T getPrioritizedVersion(List<T> versions) {
     Optional<T> validToday = versions.stream().filter(i -> DateRange.fromVersionable(i).contains(LocalDate.now())).findFirst();
     Optional<T> validInFuture = versions.stream().filter(i -> i.getValidFrom().isAfter(LocalDate.now())).findFirst();
-    return validToday.orElse(validInFuture.orElse(versions.get(versions.size() - 1)));
+    return validToday.orElse(validInFuture.orElse(versions.getLast()));
   }
 }
